--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,24 @@
 repos:
-  - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v1.6.0
-    hooks:
-      - id: autopep8
+  # - repo: https://github.com/pre-commit/mirrors-autopep8
+  #   rev: v1.6.0
+  #   hooks:
+  #     - id: autopep8
 
   - repo: https://github.com/psf/black
     rev: 24.3.0
     hooks:
       - id: black
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
-    hooks:
-      - id: flake8
+  # - repo: https://github.com/pycqa/flake8
+  #   rev: 7.0.0
+  #   hooks:
+  #     - id: flake8
+  #       args: [--max-line-length=120]
 
-  - repo: local
-    hooks:
-      - id: run-unit-tests
-        name: Run Unit Tests
-        entry: python -m unittest discover -s tests
-        language: system
-        types: [python]
+  # - repo: local
+  #   hooks:
+  #     - id: run-unit-tests
+  #       name: Run Unit Tests
+  #       entry: python -m unittest discover -s tests
+  #       language: system
+  #       types: [python]
