--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 repos:
-  # - repo: https://github.com/pre-commit/mirrors-autopep8
-  #   rev: v1.6.0
-  #   hooks:
-  #     - id: autopep8
+  - repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: v1.6.0
+    hooks:
+      - id: autopep8
 
   - repo: https://github.com/psf/black
     rev: 24.3.0
