--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,10 +15,10 @@ repos:
       - id: flake8
         args: [--max-line-length=120]
 
-  # - repo: local
-  #   hooks:
-  #     - id: run-unit-tests
-  #       name: Run Unit Tests
-  #       entry: python -m unittest discover -s tests
-  #       language: system
-  #       types: [python]
+  - repo: local
+    hooks:
+      - id: run-unit-tests
+        name: Run Unit Tests
+        entry: python -m unittest discover -s tests
+        language: system
+        types: [python]
